--- a/package.json
+++ b/package.json
@@ -58,12 +58,14 @@
     "node-sass": "^4.13.1",
     "postcss-loader": "^2.1.6",
     "react": "16.13.1",
+    "react-animate-height": "^2.0.23",
     "react-dom": "16.13.1",
     "react-redux": "7.2.0",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "redux": "4.0.5",
     "redux-form": "^8.3.7",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
     "webpack": "4.42.1",
